# osu-file-parser

./: Cargo.toml  flake.nix  readme.md
benches/: bench.rs
benches/files/: 1hr.osu  aspire15.osu  aspire16.osu  aspire18.osu  aspire19.osu  aspire21.osu  aspire23.osu  aspire3.osu  aspire6.osu  aspire8.osu  aspire9.osu  aspire_osb2.osb  crazy.osu
src/: helper.rs  lib.rs  osu_file.rs  parsers.rs  tests.rs
src/helper/: macros.rs  mod.rs  trait_ext.rs
src/osu_file/: colours.rs  difficulty.rs  editor.rs  events.rs  general.rs  helper.rs  hitobject.rs  metadata.rs  mod.rs  parsers.rs  section_error.rs  timingpoint.rs  types.rs
src/osu_file/colours/: colour_parser.rs  error.rs  mod.rs  types.rs
src/osu_file/difficulty/: error.rs  mod.rs
src/osu_file/editor/: error.rs  mod.rs
src/osu_file/events/: error.rs  mod.rs  storyboard.rs
src/osu_file/events/audio_sample/: error.rs  mod.rs
src/osu_file/events/normal_event/: error.rs  mod.rs  parsers.rs  types.rs
src/osu_file/events/storyboard/: cmd_parser.rs  cmds.rs  error.rs  mod.rs  parser.rs  sprites.rs  types.rs
src/osu_file/general/: error.rs  mod.rs  types.rs
src/osu_file/hitobject/: error.rs  helper.rs  hitobject_parser.rs  misc_types.rs  mod.rs  types.rs
src/osu_file/hitobjects/: error.rs  mod.rs  parser.rs  types.rs
src/osu_file/metadata/: error.rs  mod.rs
src/osu_file/osb/: error.rs  mod.rs  types.rs
src/osu_file/timingpoint/: error.rs  mod.rs
src/osu_file/timingpoints/: error.rs  mod.rs  types.rs
src/tests/: error_line_index.rs  mod.rs  parsers.rs  storyboard.rs
src/tests/hitobject/: error.rs  mod.rs  parse.rs
src/tests/hitobjects/: error.rs  parse.rs
src/tests/osu_files/: mod.rs
src/tests/osu_files/files/: acid_rain.osb  acid_rain.osu  aspire1.osu  aspire11.osu  aspire12.osu  aspire13.osu  aspire14.osu  aspire15.osu  aspire16.osu  aspire17.osu  aspire18.osu  aspire19.osu  aspire1_osb.osb  aspire2.osu  aspire20.osu  (+51 more)
src/tests/storyboard/: cmds.rs  mod.rs  sprites.rs
(+5 files in other folders)
