[package]
name = "osu-file-parser"
version = "0.1.0"
edition = "2021"
authors = ["yuu0141 <eddio0141@gmail.com>"]
description = "Parser for .osu files written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
thiserror = "1.0.31"
strum = "0.24.0"
strum_macros = "0.24.0"
nom = "7.1.1"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
